--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <a class="nav-link" href="#portfolio">Galería</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">Nosotros</a>
+              <a class="nav-link" href="#about">Planes</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
             <li class="nav-item">
@@ -188,7 +188,10 @@
           <h2 class="section-heading text-uppercase">
             Nuestros recuerdos juntos
           </h2>
-          <h3 class="section-subheading text-muted">
+          <h3
+            class="section-subheading text-muted"
+            style="color: #000000 !important"
+          >
             Disfruto de cada momento a tu lado.
           </h3>
         </div>
@@ -358,13 +361,20 @@
         </div>
       </div>
     </section>
-    <!-- About-->
-    <section class="page-section" id="about">
+    <!-- Planes-->
+    <section
+      class="page-section"
+      id="about"
+      style="background: linear-gradient(to bottom, #f7b5aa, #e57461)"
+    >
       <div class="container">
         <div class="text-center">
-          <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">
-            Lorem ipsum dolor sit amet consectetur.
+          <h2 class="section-heading text-uppercase">Planes</h2>
+          <h3
+            class="section-subheading text-muted"
+            style="color: #000000 !important"
+          >
+            Solo paso a recordarte algunas de nuestras metas propuestas
           </h3>
         </div>
         <ul class="timeline">
@@ -372,21 +382,22 @@
             <div class="timeline-image">
               <img
                 class="rounded-circle img-fluid"
-                src="assets/img/about/1.jpg"
+                src="assets/img/about/1.jpeg"
                 alt="..."
               />
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>2009-2011</h4>
-                <h4 class="subheading">Our Humble Beginnings</h4>
+                <h4 class="subheading" style="color: #810000 !important">
+                  Casarnos 💍
+                </h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-                  ut voluptatum eius sapiente, totam reiciendis temporibus qui
-                  quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                  dolore laudantium consectetur!
+                <p class="text-muted" style="color: #550000 !important">
+                  En unos años tenemos que casarnos para dar nuestro primer gran
+                  paso a la unión con Dios. Ese día será uno de los más
+                  memorables y maravillosos para ambos. Tengo muchas ansias de
+                  que ese moemento llegue.
                 </p>
               </div>
             </div>
@@ -401,15 +412,16 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>March 2011</h4>
-                <h4 class="subheading">An Agency is Born</h4>
+                <h4 class="subheading" style="color: #810000 !important">
+                  Tener nuestro bebé 👶
+                </h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-                  ut voluptatum eius sapiente, totam reiciendis temporibus qui
-                  quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                  dolore laudantium consectetur!
+                <p class="text-muted" style="color: #550000 !important">
+                  No sabes lo feliz que me hace pensar que vamos a tener nuestra
+                  propia familia. Sé que seremos los mejores padres del mundo y
+                  ya de acuerdo a nuestras posibilidades podemos tener más de un
+                  hijo.
                 </p>
               </div>
             </div>
@@ -424,15 +436,16 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>December 2015</h4>
-                <h4 class="subheading">Transition to Full Service</h4>
+                <h4 class="subheading" style="color: #810000 !important">
+                  Recorrer el mundo 🌍
+                </h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-                  ut voluptatum eius sapiente, totam reiciendis temporibus qui
-                  quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                  dolore laudantium consectetur!
+                <p class="text-muted" style="color: #550000 !important">
+                  Vamos a viajar por todos los lugares posibles, pero ya sabes
+                  que primero hay que ahorrar mucho dinero, porque tenemos
+                  varios proyecto que cumplir, uno de ellos es el que sigue
+                  debajo.
                 </p>
               </div>
             </div>
@@ -447,15 +460,16 @@
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>July 2020</h4>
-                <h4 class="subheading">Phase Two Expansion</h4>
+                <h4 class="subheading" style="color: #810000 !important">
+                  Nuestro hogar 🏠
+                </h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-                  ut voluptatum eius sapiente, totam reiciendis temporibus qui
-                  quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                  dolore laudantium consectetur!
+                <p class="text-muted" style="color: #550000 !important">
+                  Este proyecto es una hazaña para nosotros y lo sabes, ambos
+                  vamos a cooperar para poner cada ladrillo de donde viviremos y
+                  pasaremos el resto de nuestras vidas con nuestra hermosa
+                  familia. (Espero entiendas la referencia de la foto)
                 </p>
               </div>
             </div>
@@ -463,11 +477,11 @@
           <li class="timeline-inverted">
             <div class="timeline-image">
               <h4>
-                Be Part
+                Estefanny
                 <br />
-                Of Our
+                y
                 <br />
-                Story!
+                José
               </h4>
             </div>
           </li>
