--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                   En unos años tenemos que casarnos para dar nuestro primer gran
                   paso a la unión con Dios. Ese día será uno de los más
                   memorables y maravillosos para ambos. Tengo muchas ansias de
-                  que ese moemento llegue.
+                  que ese momento llegue.
                 </p>
               </div>
             </div>
@@ -537,11 +537,11 @@
                 alguna manera como para no olvidarme ninguna. Simplemente
                 gracias por existir en mi vida, sobre todo por estar en los
                 momentos más díficiles para mí, por darme esa fuerza y
-                motivación para seguir con mis estudio. Creéme que si hoy me
+                motivación para seguir con mis estudios. Creéme que si hoy me
                 mato estudiando, es porque quiero en el futuro darte lo mejor,
                 todo el mundo si es posible. Por eso quiero hacerte una
-                propuesta, estás dispuesta a ir a muerte juntos pese a todos los
-                obtáculos y presiones que el destino nos ponga.
+                propuesta, ¿estás dispuesta a ir a muerte juntos pese a todos
+                los obtáculos y presiones que el destino nos ponga?
                 <br />
                 <br />
                 ¿Aceptas el reto?
