--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
             Nuestra melodía favorita
           </h2>
           <h3 class="section-subheading text-muted" style="color: white">
-            Para que siempre la escuche!
+            Para que siempre la escuches!
           </h3>
         </div>
         <div
