--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
       class="page-section bg-light"
       id="team"
       style="
-        background-image: url('https://rare-gallery.com/mocahbig/61055-Scarlet-Witch-Vision-Marvel-Comics-Marvel-ComicsScarlet.jpg');
+        background-image: url('assets/img/bg_wandavision.jpg');
         background-size: cover;
         background-position: center;
         opacity: 0.85;
